syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zupacademy.gabrielamartins";
option java_outer_classname = "KeyManager";
option objc_class_prefix = "HLW";

import "google/protobuf/timestamp.proto";

package br.com.zupacademy.gabrielamartins;

service KeyManagerCadastraService{
  rpc cadastrarChavePix (CadastrarChavePixRequest) returns (CadastrarChavePixResponse) {}


}

service KeyManagerRemoveService{
  rpc removerChavePix (RemoverChavePixRequest) returns (RemoverChavePixResponse){}
}

service KeyManagerCarregaService{
  rpc carregarChavePix (CarregarChavePixRequest) returns (CarregarChavePixResponse){}
}

service KeyManagerListaService{
  rpc listarChavesPix (ListarChavesPixRequest) returns (ListarChavesPixResponse){}
}



enum TipoChave {

  CHAVE_DESCONHECIDA = 0;
  CPF = 1;
  TELEFONE = 2;
  EMAIL = 3;
  ALEATORIA = 4;

}

enum TipoConta {

  DESCONHECIDO = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;

}

message CadastrarChavePixRequest {

  string clienteId = 1;
  TipoChave tipoChave = 2;
  string chave = 3;
  TipoConta tipoConta = 4;


}

message CadastrarChavePixResponse {

  string pixId = 1;
  string clienteId = 2;
}

message RemoverChavePixRequest {

  string clienteId = 1;
  string pixId = 2;
}

message RemoverChavePixResponse {

  string clienteId = 1;
  string pixId = 2;
}

message CarregarChavePixRequest{

  message FiltroPorPixId{
    string clienteId = 1;
    string pixId = 2;
  }

  oneof filtro{
    FiltroPorPixId pixId = 1;
    string chave = 2;
  }
}

message CarregarChavePixResponse {

  message ChavePix{

    message ContaInfo{
      TipoConta tipoConta = 1;
      string instituicao = 2;
      string nomeTitular = 3;
      string cpfTitular = 4;
      string agencia = 5;
      string numeroConta = 6;
    }

    TipoChave tipoChave = 1;
    string chave = 2;
    ContaInfo conta = 3;
    google.protobuf.Timestamp criadaEm = 4;
  }

  string clienteId = 1;
  string pixId = 2;
  ChavePix chave = 3;
}

message ListarChavesPixRequest {

  string clienteId = 1;
}

message ListarChavesPixResponse {

  message ChavePix {
    string pixId = 1;
    TipoChave tipoChave = 2;
    string chave = 3;
    TipoConta tipoConta = 4;
    google.protobuf.Timestamp criadaEm = 5;
  }

  string clienteId = 1;
  repeated ChavePix chaves = 2;

}